static/style.css
/* ... */
.progress-status-btn:hover {
    background-color: rgb(231, 231, 231);
}

.pending-status-btn {
    font-family: 'Satoshi';
    background-color: #ffffff;
    border: none;
    padding-right: 0.5rem;
    padding-left: 0.5rem;
}

.pending-status-btn:hover {
    background-color: rgb(231, 231, 231);
}

.overdue-status-btn {
    font-family: 'Satoshi';
    background-color: #ffffff;
    border: none;
    padding-right: 0.5rem;
    padding-left: 0.5rem;
}

.overdue-status-btn:hover {
    background-color: rgb(231, 231, 231);
}

.complete-status-btn {
    font-family: 'Satoshi';
    background-color: #ffffff;
    border: none;
    padding-right: 1rem;
    padding-left: 0.5rem;
    border-top-right-radius: 0.7rem;
    border-bottom-right-radius: 0.7rem;
}

.complete-status-btn:hover {
    background-color: rgb(231, 231, 231);
}

.sort-btn {
    font-family: 'Satoshi';
    background-color: #ffffff;
    padding: 0.5rem 1.5rem 0.5rem 1.5rem;
    border-radius: 0.75rem;
    border: #b7b7b7 0.1rem solid;
    margin-right: 3rem;
}

.sort-btn:hover {
    background-color: rgb(231, 231, 231);
}

thead .list-headers th {
    text-align: left;
    background-color: #ffffff;
    padding: 0.5rem 0;
    border-bottom: #b7b7b7 0.2rem solid;
}

.checkbox-header {
    width: 5% !important;
}

.name-header {
    padding-right: 1rem !important;
}

.subject-header {
    padding-right: 2rem !important;
}

.status-header {
    padding-left: 0.25rem !important; 
}

.task-list {
    width: 100%;
    border-collapse: collapse;
    background-color: #ffffff;
}

.task-list thead tr {
    border-bottom: 0.2rem solid #b7b7b7;
}

.task-list th {
    text-align: left;
    font-weight: 500;
    color: #000000;
    font-size: 0.95rem;
}

.task-list td {
    padding: 0.5rem 0;
}

.task-checkbox {
    width: 4rem;
}

.list-edit-action {
    color: #000000;
    text-decoration: none;
}

.list-edit-action:hover {
    color: rgb(120, 202, 252);
    cursor: pointer;
}

.list-delete-action {
    color: #000000;
    padding-left: 0.5rem;
}

.list-delete-action:hover {
    color: rgb(255, 0, 0);
    cursor: pointer;
}

.tasks-page-no-tasks-msg {
    display: flex;
    font-size: 1.2rem;
    font-weight: 550;
    padding: 1rem 0 1rem 0;
    background-color: #ffffff;
    border-bottom-left-radius: 0.85rem;
    border-bottom-right-radius: 0.85rem;
    justify-content: center;
    align-items: center;
}

.task-info td{
    border-bottom: #b7b7b7 0.2rem solid;
}

.task-info:last-child td {
    border-bottom: none;
}

.task-info:last-child td:first-child {
    border-bottom-left-radius: 1rem;
}

.task-info:last-child td:last-child {
    border-bottom-right-radius: 1rem;
}

.name-truncate {
    max-width: 5rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

